--- a/inventario/templates/inventario/categoria/lista.html
+++ b/inventario/templates/inventario/categoria/lista.html
@@ -7,6 +7,10 @@
         <div class="col-sm-12 col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-body">
+                    <p class="card-text">
+                        <a href="{% url 'inventario:crear-categoria' %}"
+                           class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> Registrar</a>
+                    </p>
                     <h4 class="card-title">Listado de Categorias</h4>
                     <table class="table">
                         {% if categorias %}
