--- a/templates/base.html
+++ b/templates/base.html
@@ -117,9 +117,6 @@
                             {#  Anteproyectos y Trabajos de Grado #}
                             <a class="dropdown-item" href="#">Anteproyecto</a>
                             <div class="dropdown-divider"></div>
-                            {#  Inventario #}
-                            <a class="dropdown-item" href="#">Equipo</a>
-                            <div class="dropdown-divider"></div>
                             {# Solicitud #}
                             <a class="dropdown-item" href="{% url 'solicitud:lista' %}">Solicitud</a>
                         </div>
@@ -147,6 +144,7 @@
                             <a class="dropdown-item" href="{% url 'inventario:fabricante-lista' %}">Fabricantes</a>
                             <a class="dropdown-item" href="{% url 'inventario:categoria-lista' %}">Categorias</a>
                             <a class="dropdown-item" href="{% url 'inventario:modelo-lista' %}">Modelos</a>
+                            <a class="dropdown-item" href="{% url 'inventario:lista-aulas' %}">Aulas</a>
                         </div>
                     </li>
                 {% endif %}
@@ -222,8 +220,6 @@
                 </div>
             </div>
         {% endblock %}
-
-
 
 
     </div>
