Trabajo en modulo de edicion de perfil.

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,6 +92,7 @@
                             <div class="dropdown-divider"></div>
                             {#  Inventario #}
                             <a class="dropdown-item" href="#"><b>Inventario</b></a>
+                            {# TODO: Agregar "Ver equipos de la facultad" #}
                             <a class="dropdown-item" href="{% url 'inventario:crear-equipo' %}">Equipo</a>
                             <div class="dropdown-divider"></div>
                             {# Solicitud #}
