--- a/perfiles/templates/perfiles/editar.html
+++ b/perfiles/templates/perfiles/editar.html
@@ -6,16 +6,13 @@
 
 {% block head %}
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <style>
-        .cedula-field {
-            display: inline;
-        }
-    </style>
 {% endblock %}
 
 {% block content %}
     <div class="row">
-        <div class="col-md-4">
+        <div class="card-deck">
+
+
             <div class="card">
                 <div class="card-body">
                     <div class="card-title"><h4>Informacion Personal</h4></div>
@@ -29,34 +26,44 @@
                         <hr/>
                         {{ form.segundo_apellido }}
                         <hr/>
+                        {{ form.pais }}
                         <hr/>
                         <h5>Cedula</h5>
-                         <div class="form-group row">
-  <div class="col-xs-2">
-    <label for="ex1">col-xs-2</label>
-    <input class="form-control" id="ex1" type="text">
-  </div>
-  <div class="col-xs-3">
-    <label for="ex2">col-xs-3</label>
-    <input class="form-control" id="ex2" type="text">
-  </div>
-  <div class="col-xs-4">
-    <label for="ex3">col-xs-4</label>
-    <input class="form-control" id="ex3" type="text">
-  </div>
-</div>
+                        <div class="form-row">
+                            <div class="form-group col-md-3">{{ form.provincia }}</div>
+                            <div class="form-group col-md-3">{{ form.clase }}</div>
+                            <div class="form-group col-md-3">{{ form.tomo }}</div>
+                            <div class="form-group col-md-3">{{ form.folio }}</div>
+                        </div>
+                        <hr />
+                        <h5>Otros Datos</h5>
+                        {{ form.fecha_nacimiento }}
+                        <hr/>
+                        {{ form.imagen }}
+                        <hr />
+                        {{ form.fecha_inicio }}
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4">
+
+
             <div class="card">
                 <div class="card-body">
                     <div class="card-title">Informacion Profesional</div>
-                    <div class="card-body"></div>
+                    <div class="card-body">
+                        {{ form.categoria }}
+                        <hr />
+                        <h5 class="card-title">Codigo de Departamento</h5>
+                        <div class="form-row">
+                            <div class="form-group col-md-4">{{ form.cod_sede }}</div>
+                            <div class="form-group col-md-4">{{ form.cod_unidad }}</div>
+                            <div class="form-group col-md-4">{{ form.cod_seccion }}</div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+
         </div>
-        <div class="col-md-4"></div>
     </div>
 {% endblock %}
