--- a/inventario/templates/inventario/aula/lista.html
+++ b/inventario/templates/inventario/aula/lista.html
@@ -7,7 +7,7 @@
         <div class="col-sm-12 col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Listado de Aulas</h4>
+                    <h4 class="card-title">Listado de Aulas - {% if request.user.is_superuser %}General{% else %}{{ request.user.perfil.unidad }}{% endif %}</h4>
                     <p class="card-text"><a class="btn btn-primary" href="{% url 'inventario:crear-aulas' %}"><i
                             class="fa fa-edit"></i> Registrar</a></p>
                     <table class="table">
@@ -15,7 +15,7 @@
                             <tbody>
                             {% for aula in aulas %}
                                 <tr>
-                                    <td>{{ aula }}</td>
+                                    <td>{{ aula.ubicacion }}-{{ aula }}</td>
                                     <td><a href="#" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> </a>
                                         {% if aula.url %}
                                             <a href="#" class="btn btn-primary btn-sm"><i class="fas fa-link"></i>
