--- a/inventario/templates/inventario/equipo/lista.html
+++ b/inventario/templates/inventario/equipo/lista.html
@@ -1,33 +1,33 @@
 {% extends 'base.html' %}
 
-{% block title %}Lista Modelos{% endblock %}
+{% block title %}Lista Equipos{% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="col-sm-12 col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Listado de Aulas</h4>
+                    <h4 class="card-title">Listado de Equipos</h4>
                     <p class="card-text"><a class="btn btn-primary" href="{% url 'inventario:crear-equipo' %}"><i
                             class="fa fa-edit"></i> Registrar</a></p>
                     <table class="table">
-                        {% if aulas %}
+                        {% if equipos %}
                             <tbody>
-                            {% for aula in aulas %}
+                            {% for equipo in equipos %}
                                 <tr>
-                                    <td>{{ aula }}</td>
+                                    <td>{{ equipo }}</td>
                                     <td><a href="#" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> </a>
-                                        {% if aula.url %}
-                                            <a href="#" class="btn btn-primary btn-sm"><i class="fas fa-link"></i>
-                                                Aula </a>
+                                        {% if equipo.modelo.url %}
+                                            <a href="{{ equipo.modelo.url }}" class="btn btn-primary btn-sm"><i class="fas fa-link"></i>
+                                                Equipo </a>
                                         {% else %}
-                                            <a href="#" class="btn disabled"><i class="fas fa-link"></i> Aula</a>
+                                            <a href="#" class="btn disabled"><i class="fas fa-link"></i> Equipo</a>
                                         {% endif %}</td>
                                 </tr>
                             {% endfor %}
                             </tbody>
                         {% else %}
-                            <div class="alert alert-info text-center">No hay aulas registradas</div>
+                            <div class="alert alert-info text-center">No hay equipos registradas</div>
                         {% endif %}
                     </table>
                 </div>
