--- a/inventario/templates/inventario/aula/lista.html
+++ b/inventario/templates/inventario/aula/lista.html
@@ -1,22 +1,33 @@
 {% extends 'base.html' %}
 
-{% block title %}Lista Modelos{% endblock %}
+{% block title %}Listado de Aulas{% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="col-sm-12 col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Listado de Aulas - {% if request.user.is_superuser %}General{% else %}{{ request.user.perfil.unidad }}{% endif %}</h4>
+                    <h4 class="card-title">Listado de Aulas - {% if request.user.is_superuser %}General{% else %}
+                        {{ request.user.perfil.unidad }}{% endif %}</h4>
                     <p class="card-text"><a class="btn btn-primary" href="{% url 'inventario:crear-aulas' %}"><i
                             class="fa fa-edit"></i> Registrar</a></p>
                     <table class="table">
                         {% if aulas %}
+                            <thead>
+                            <tr>
+                                <th>Unidad</th>
+                                <th>Numero</th>
+                                <th>Tipo</th>
+                            </tr>
+                            </thead>
                             <tbody>
                             {% for aula in aulas %}
                                 <tr>
-                                    <td>{{ aula.ubicacion }}-{{ aula }}</td>
-                                    <td><a href="#" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> </a>
+                                    <td>{{ aula.ubicacion }}</td>
+                                    <td>{{ aula.numero }}</td>
+                                    <td>{{ aula.get_tipo_display }}</td>
+                                    <td><a href="{% url 'inventario:editar-aulas' aula.pk %}"
+                                           class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> Editar</a>
                                         {% if aula.url %}
                                             <a href="#" class="btn btn-primary btn-sm"><i class="fas fa-link"></i>
                                                 Aula </a>
