--- a/templates/base.html
+++ b/templates/base.html
@@ -138,14 +138,12 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/admin/">Admin</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#"><b>Mis Solicitudes</b></a>
-                            <a class="dropdown-item" href="#">Pendientes</a>  <!--TODO: Crear vista -->
-                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#"><b>Inventario</b></a>
                             <a class="dropdown-item" href="{% url 'inventario:fabricante-lista' %}">Fabricantes</a>
                             <a class="dropdown-item" href="{% url 'inventario:categoria-lista' %}">Categorias</a>
                             <a class="dropdown-item" href="{% url 'inventario:modelo-lista' %}">Modelos</a>
                             <a class="dropdown-item" href="{% url 'inventario:lista-aulas' %}">Aulas</a>
+                            <a class="dropdown-item" href="{% url 'inventario:lista-equipo' %}">Equipos</a>
                         </div>
                     </li>
                 {% endif %}
@@ -161,7 +159,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><b>Inventario</b></a>
-                            <a class="dropdown-item" href="{% url 'inventario:lista-aulas' %}">Aulas <span
+                            <a class="dropdown-item" href="{% url 'inventario:facultad-aulas' request.user.perfil.unidad.pk %}">Aulas <span
                                     class="badge badge-primary">{{ request.user.perfil.unidad.aula_set.count }}</span></a>
                             <a class="dropdown-item" href="{% url 'inventario:lista-equipo' %}">Equipos <span
                                     class="badge badge-primary">{{ request.user.perfil.unidad.equipos.count }}</span></a>
@@ -189,6 +187,8 @@
                             <a class="dropdown-item" href="{% url 'perfil:editar' %}">Editar Perfil</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Notificaciones</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Solicitudes</a>  <!--TODO: Crear vista -->
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/logout/">Cerrar Sesion</a>
                         </div>
