--- a/templates/base.html
+++ b/templates/base.html
@@ -92,12 +92,9 @@
                             <div class="dropdown-divider"></div>
                             {#  Inventario #}
                             <a class="dropdown-item" href="#"><b>Inventario</b></a>
-                            {# TODO: Agregar "Ver equipos de la facultad" #}
+                            <a class="dropdown-item" href="{% url 'inventario:crear-aulas' %}">Aula</a>
                             <a class="dropdown-item" href="{% url 'inventario:crear-equipo' %}">Equipo</a>
                             <div class="dropdown-divider"></div>
-                            {# Solicitud #}
-                            <a class="dropdown-item" href="#"><b>Solicitudes</b></a>
-                            <a class="dropdown-item" href="{% url 'solicitud:crear' %}">Solicitud</a>
                         </div>
                     </li>
                 {% endif %}
