Uniformidad plantillas de inventario.

--- a/inventario/templates/inventario/aula/lista.html
+++ b/inventario/templates/inventario/aula/lista.html
@@ -40,6 +40,9 @@
                         {% endif %}
                     </table>
                 </div>
+                <div class="card-footer">
+                    {% include 'inventario/equipo/include/partial_pagination_footer.html' %}
+                </div>
             </div>
         </div>
     </div>
