--- a/templates/base.html
+++ b/templates/base.html
@@ -156,9 +156,11 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#"><b>Inventario</b></a>
-                            <a class="dropdown-item" href="{% url 'inventario:facultad-aulas' request.user.perfil.unidad.pk %}">Aulas <span
+                            <a class="dropdown-item"
+                               href="{% url 'inventario:facultad-aulas' request.user.perfil.unidad.pk %}">Aulas <span
                                     class="badge badge-primary">{{ request.user.perfil.unidad.aula_set.count }}</span></a>
-                            <a class="dropdown-item" href="{% url 'inventario:lista-equipo' %}">Equipos <span
+                            <a class="dropdown-item"
+                               href="{% url 'inventario:facultad-equipo' request.user.perfil.unidad.pk %}">Equipos <span
                                     class="badge badge-primary">{{ request.user.perfil.unidad.equipos.count }}</span></a>
                         </div>
                     </li>
