Finalizacion modulo de inventario.

--- a/inventario/templates/inventario/equipo/crear.html
+++ b/inventario/templates/inventario/equipo/crear.html
@@ -11,7 +11,7 @@
                     <form method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <button type="submit" class="btn btn-primary">Registrar Equipo</button>
+                        <button type="submit" class="btn btn-primary">Guardar</button>
                     </form>
                 </div>
             </div>
