--- a/perfiles/templates/perfiles/privado_redux.html
+++ b/perfiles/templates/perfiles/privado_redux.html
@@ -11,7 +11,11 @@
 
     <div class="card">
         <div class="card-body">
-            <img class="img-fluid " src="http://lorempixel.com/400/400/cats/" alt="Card image cap">
+            {% if perfil.imagen %}
+                <img class="img-fluid " src="{{ perfil.imagen.url }}" alt="Card image cap">
+            {% else %}
+                <img class="img-fluid " src="http://lorempixel.com/400/400/cats/" alt="Card image cap">
+            {% endif %}
             <hr/>
             <h5 class="card-title">{{ perfil.primer_apellido }}, {{ perfil.primer_nombre }} |
                 {{ perfil.provincia }}-{{ perfil.clase }}-{{ perfil.tomo }}-{{ perfil.folio }}</h5>
@@ -30,7 +34,7 @@
 
     <!-- Datos Academicos -->
 
-    <div class="card">
+    <div class="card d-sm-block">
         <div class="card-body">
             <h5 class="card-title">Informacion Institucional</h5>
             <p class="card-text"></p>
