--- a/templates/base.html
+++ b/templates/base.html
@@ -194,7 +194,7 @@
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="login">Iniciar Sesion</a>
+                        <a class="nav-link" href="/login/">Iniciar Sesion</a>
                     </li>
                 {% endif %}
 
