--- a/actividades/templates/actividades/estadia/crear.html
+++ b/actividades/templates/actividades/estadia/crear.html
@@ -10,9 +10,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-3">
-        </div>
-        <div class="col-6">
+        <div class="col-md-6 offset-3 col-sm-12">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Registrar Estadia</h4>
