--- a/ubicacion/templates/sede.html
+++ b/ubicacion/templates/sede.html
@@ -79,7 +79,7 @@
                     <div class="card-body">
                         <p class="card-title">Cantidad de Estudiantes: {{ sede.get_estudiantes_count }}</p>
                         <p class="card-text">
-                        <h3 class="text-right">
+                        <h3 class="text-right" id="estudianteChartHolder" data-url="{% url '' %}">
                             <canvas id="estudianteChart"></canvas>
                         </h3>
                         </p>
